# saved

./: .gitignore  Cargo.toml  README.md  SIMPLE_TEST_FLOW.md  TODOs.md  test-two-peers.sh
.github/workflows/: ci-mininet.yml
alice-account/: db.sqlite-shm  db.sqlite-wal
bob-account/: db.sqlite-shm  db.sqlite-wal
crates/saved-cli/: Cargo.toml  README.md
crates/saved-cli-rs/: Cargo.toml  README.md
crates/saved-cli-rs/src/: main.rs
crates/saved-cli-rs/src/commands/: account.rs  device.rs  import_export.rs  message.rs  mod.rs  sync.rs
crates/saved-cli-rs/src/utils/: formatting.rs  mod.rs  validation.rs
crates/saved-cli/src/: main.rs
crates/saved-cli/src/commands/: account.rs  device.rs  import_export.rs  message.rs  mod.rs  sync.rs
crates/saved-cli/src/utils/: formatting.rs  validation.rs
crates/saved-core/: Cargo.toml  README.md
crates/saved-core-rs/: Cargo.toml  README.md
crates/saved-core-rs/examples/: basic_usage.rs
crates/saved-core-rs/src/: crypto.rs  error.rs  events.rs  lib.rs  networking.rs  protobuf.rs  storage.rs  sync.rs  types.rs
crates/saved-core-rs/src/storage/: memory.rs  mod.rs  sqlite.rs  trait_impl.rs
crates/saved-core/examples/: basic_usage.rs
crates/saved-core/src/: chunk_sync.rs  crypto.rs  device_linking.rs  error.rs  error_recovery.rs  events.rs  lib.rs  networking.rs  protobuf.rs  sync.rs  types.rs
crates/saved-core/src/storage/: memory.rs  mod.rs  sqlite.rs  trait_impl.rs
crates/saved-daemon/: Cargo.toml
crates/saved-daemon/src/: main.rs  port_discovery.rs  server.rs
crates/saved-relay-server/: Cargo.toml  README.md
crates/saved-relay-server/src/: main.rs
crates/savedctl/: Cargo.toml
crates/savedctl/src/: client.rs  main.rs
docs/: .gitignore  multi-daemon-setup.md  ref.md
relay-server/src/: main.rs
scripts/: format.sh
src/: env.rs  error.rs  keygen.rs  main.rs  network.rs  signals.rs  view.rs
src/network/: api.rs  cmd.rs  handle.rs  mod.rs  relay_manager.rs  rpc_macros.rs
tauri-app/: README.md  index.html  package-lock.json  package.json
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
test-device-demo/: alice-qr.json
test-multi-daemon/alice/: db.sqlite-shm  db.sqlite-wal
test-multi-daemon/bob/: db.sqlite-shm  db.sqlite-wal
test-tcp-daemon/: db.sqlite-shm  db.sqlite-wal
tests/: mininet_utils.py  test_lan.py  test_nat_traversal.py  udp_traversal.py
