[package]
name = "saved-v3"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.56.0", features = ["tokio", "tcp", "quic", "dns", "noise", "yamux", "ping", "macros", "mdns", "kad", "identify", "rsa", "relay", "autonat", "dcutr"] }
libp2p-connection-limits = "0.6.0"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
sha2 = "0.10.9"
futures = "0.3.31"
rsa = "0.10.0-rc.9"
rand = "0.9.2"
rand_chacha = "0.9.0"
rand_core = "0.6.4"
dashmap = "7.0.0-rc2"
env_helpers = '0.1.0'
async-trait = "0.1.89"
shutdown_signal = "0.1.0"
