[package]
name = "saved-core-rs"
version = "0.1.0"
edition = "2021"
description = "Core library for SAVED - Personal Messages Sync (P2P-first)"
authors = ["SAVED Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/saved/saved-core-rs"
keywords = ["p2p", "sync", "encryption", "libp2p", "crdt"]
categories = ["cryptography", "network-programming", "data-structures"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Networking - libp2p
libp2p = { version = "0.53", features = [
    "quic",
    "tcp",
    "noise",
    "yamux",
    "mdns",
    "identify",
    "autonat",
    "relay",
    "dcutr",
    "gossipsub",
    "request-response",
    "macros",
    "tokio",
] }
multiaddr = "0.18"

# Cryptography
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
blake3 = "1.5"
hkdf = "0.12"
sha2 = "0.10"
argon2 = "0.5"
rand = "0.8"
rand_core = "0.6"

# Serialization
prost = "0.12"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
async-trait = "0.1"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.21"
url = "2.5"
pathdiff = "0.2"

# QR code generation
qrcode = "0.14"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

[features]
default = []
