[package]
name = "saved-daemon"
version = "0.1.0"
edition = "2021"
description = "SAVED daemon for background network management and storage"

[[bin]]
name = "saved-daemon"
path = "src/main.rs"

[dependencies]
saved-core = { path = "../saved-core" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
